@@ -373,9 +373,11 @@ static int chmd_read_headers(struct mspack_system *sys, struct mspack_file *fh,
       do { offset   = (offset   << 7) | (*p & 0x7F); } while (*p++ & 0x80);
       do { length   = (length   << 7) | (*p & 0x7F); } while (*p++ & 0x80);
 
+      /* empty files and directory names are stored as a file entry at
+       * offset 0 with length 0. We want to keep empty files, but not
+       * directory names, which end with a "/" */
       if ((offset == 0) && (length == 0)) {
-	/* null file -- used to store directory names. Why? */
-	continue;
+	if ((name_len > 0) && (name[name_len-1] == '/')) continue;
       }
 
       if (section > 1) {
